--- a/index.html
+++ b/index.html
@@ -224,9 +224,9 @@
   </header>
 
   <!--div class="container-fluid pb-3"></div-->
-  <div class="container-fluid pb-3">
+  <div class="container">
     <!--div class="d-grid gap-3" style="grid-template-columns: 1fr 2fr;"></div-->
-    <div class="row themed-grid-row" style="grid-template-columns: 1fr 2fr;">
+    <div class="row">
       <div class="col-md-6">
         <img src="C:\Users\anof\OneDrive - GFT Technologies SE\Desktop\bootstrap-5.0.2-examples\headers\300-gft.png" alt="GFT" width="500" height="500" class="img-fluid">
       </div>
